--- a/Travel/templates/trip/变量名使用记录.md
+++ b/Travel/templates/trip/变量名使用记录.md
@@ -1,1 +1,22 @@
 [TOC]
+
+#将各项信息提取并赋值
+        item = i.split('|')                                 #使用“|”进行分割
+        data["station_train_code"]  = item[3]               #获取车次信息，在3号位置
+        data["from_station_name"]   = item[6]               #始发站信息在6号位置
+        data["to_station_name"]     = item[7]               #终点站信息在7号位置
+        data["start_time"]          = item[8]               #出发时间在8号位置
+        data["arrive_time"]         = item[9]               #抵达时间在9号位置
+        data["lishi"]               = item[10]              #经历时间在10号位置
+        data["swz_num"]             = item[32] or item[25]  #特别注意，商务座在32或25位置
+        data["zy_num"]              = item[31]              #一等座信息在31号位置
+        data["ze_num"]              = item[30]              #二等座信息在30号位置
+        data["gr_num"]              = item[21]              #高级软卧信息在21号位置
+        data["rw_num"]              = item[23]              #软卧信息在23号位置
+        data["dw_num"]              = item[27]              #动卧信息在27号位置
+        data["yw_num"]              = item[28]              #硬卧信息在28号位置
+        data["rz_num"]              = item[24]              #软座信息在24号位置
+        data["yz_num"]              = item[29]              #硬座信息在29号位置
+        data["wz_num"]              = item[26]              #无座信息在26号位置
+        data["qt_num"]              = item[22]              #其他信息在22号位置
+        data["note_num"]            = item[1]               #备注信息在1号位置
